# Snazee-Engine

./: CMakeLists.txt  LICENSE  Logger.cpp  Logger.h
Components/Engine/: CMakeLists.txt
Components/Engine/Source/: Engine.cpp
